# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml  my_workflow.yml
gendiff/: __init__.py  cli.py  get_diff.py  parse_data.py
gendiff/formatters/: format.py  plain.py  stylish.py
gendiff/functions/: functions.py
gendiff/scripts/: __init__.py  agrparse_work.py  gendiff.py  get_diff.py  parse_data.py
tests/: test_gendiff.py
tests/fixtures/: stylish_nested_result.txt
