[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Diff analyzer"
authors = ["VadimK <yaralavadim@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = { version = "^6.0.0", python = ">=3.8.1" }
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"